# Pet-projects

Ocean_sim/: CMakeLists.txt  EmptyEntity.hpp  Food.hpp  IEntity.hpp  Main.cpp  Obstacle.hpp  Ocean.cpp  Ocean.hpp  Ocean_sim.sln  Ocean_sim.vcxproj  Ocean_sim.vcxproj.filters  Predator.cpp  Predator.hpp  Prey.cpp  Prey.hpp
Visilitsa/: Main.cpp  Visilitsa.sln  Visilitsa.vcxproj
Visilitsa/x64/Debug/: Visilitsa.exe.recipe  Visilitsa.ilk  Visilitsa.vcxproj.FileListAbsolute.txt  vc143.idb
Visilitsa/x64/Debug/Visilitsa.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Visilitsa.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
